--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Arduino library for the Fri3d Camp 2022 badge
 category=Other
 url=https://github.com/Fri3dCamp/Badge2020_arduino
 architectures=esp32
+depends=Adafruit GFX Library,Adafruit NeoPixel,Adafruit ST7735 and ST7789 Library
